--- a/src/CSS/Name.css
+++ b/src/CSS/Name.css
@@ -1,5 +1,6 @@
 .name-wrapper {
-    width: 70%;
+    width: 80%;
+    padding: 20px;
     margin: auto;
     margin-top: 100px;
     font-size: 30px;
