--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -10,12 +10,12 @@
     margin: 20px;
 }
 
-.skill-image-section {
+.skills-card {
     text-align: center;
     margin: 10px;
 }
 
-.skill-image-section p{
+.skills-card p{
     font-size: 20px;
 }
 
