--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -1,13 +1,16 @@
 .navbar {
-  padding: 5px 90px 10px 120px;
+  padding: 0px 50px 0px 120px;
   display: flex;
   justify-content: space-between;
   margin: auto;
   align-items: center;
   font-size: 20px;
-  top: 0;
   color: #00b4d8;
   background: white;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .space {
