--- a/src/CSS/Name.css
+++ b/src/CSS/Name.css
@@ -11,3 +11,16 @@
 .home-img {
   border-radius: 50%;
 }
+
+.animated-image {
+  animation: spin 3s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
