--- a/src/CSS/Github.css
+++ b/src/CSS/Github.css
@@ -1,7 +1,7 @@
-.github {
-    padding: 20px;
-    text-align: left;
-    width: 90%;
-    margin: auto;
-    margin-top: 40px;
+.github-section {
+  padding: 20px;
+  text-align: left;
+  width: 90%;
+  margin: auto;
+  margin-top: 40px;
 }
