--- a/src/CSS/Name.css
+++ b/src/CSS/Name.css
@@ -6,6 +6,7 @@
   font-size: 30px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 10px;
+  background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
 }
 
 .home-img {
