--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -29,12 +29,11 @@
 }
 
 .skills-box {
-  background: rgb(131, 58, 180);
-  background: linear-gradient(
-    90deg,
-    rgba(131, 58, 180, 1) 0%,
-    rgba(253, 29, 29, 1) 50%,
-    rgba(252, 176, 69, 1) 100%
-  );
-  color: white;
+  background: #edf6f9;
+  cursor: pointer;
+  transition: ease-in-out;
+}
+
+.skills-box:hover {
+  background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
 }
