--- a/src/CSS/Project.css
+++ b/src/CSS/Project.css
@@ -6,6 +6,20 @@
   margin-top: 40px;
 }
 
+.project-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+@media screen and (max-width: 1000px) {
+  .project-wrapper {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+}
+
 .live {
   cursor: pointer;
 }
