--- a/src/CSS/Name.css
+++ b/src/CSS/Name.css
@@ -4,9 +4,9 @@
   margin: auto;
   margin-top: 100px;
   font-size: 30px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 10px;
-  background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+  background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%); */
 }
 
 .home-img {
