--- a/src/CSS/AboutMe.css
+++ b/src/CSS/AboutMe.css
@@ -1,21 +1,22 @@
 #about {
-    padding: 20px;
-    text-align: left;
-    width: 90%;
-    margin: auto;
-    margin-top: 50px;
+  padding: 20px;
+  text-align: left;
+  width: 90%;
+  margin: auto;
+  margin-top: 50px;
+  /* padding-top: 50px; */
 }
 
 .education {
-    margin: 30px;
-    width: 80%;
-    margin: auto;
-    margin-top: 20px;
+  margin: 30px;
+  width: 80%;
+  margin: auto;
+  margin-top: 20px;
 }
 
 .education-card {
-    padding: 20px;
-    font-family: 20px;
-    width: 90%;
-    background-color: #f7d1cd;
+  padding: 20px;
+  font-family: 20px;
+  width: 90%;
+  background-color: #f7d1cd;
 }
