--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
+
+* {
+  font-family: "Source Sans 3", serif;
+}
+
 .App {
   text-align: center;
-  font-family: "Roboto Slab", serif;
   background-color: #edf6f9;
 }
