--- a/src/CSS/Project.css
+++ b/src/CSS/Project.css
@@ -12,6 +12,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   margin: 10px;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 1000px) {
