--- a/src/CSS/Name.css
+++ b/src/CSS/Name.css
@@ -1,13 +1,21 @@
 .name-wrapper {
-  width: 80%;
+  width: 100%;
   padding: 40px;
   margin: auto;
-  /* margin-top: 100px; */
   font-size: 30px;
   padding-top: 200px;
-  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 10px;
-  background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%); */
+  background: white;
+  background: radial-gradient(125% 125% at 50% 10%, #fff 40%, #63e 100%);
+  /* background: radial-gradient(
+    125% 125% at -2% 101%,
+    rgba(245, 87, 2, 1) 10.5%,
+    rgba(245, 120, 2, 1) 16%,
+    rgba(245, 140, 2, 1) 17.5%,
+    rgba(245, 170, 100, 1) 25%,
+    rgba(238, 174, 202, 1) 40%,
+    rgba(202, 179, 214, 1) 65%,
+    rgba(148, 201, 233, 1) 100%
+  ); */
 }
 
 .loader {
